# HumanGL

./: .gitattributes  .gitignore  CMakeLists.txt  HumanGLConfig.h.in  ReadMe.md
.cmake/: OpenGL.cmake
cmake/: SetupExternalLibraries.cmake
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: gl.h
lib/glad/src/: gl.c
lib/imgui/: CMakeLists.txt
lib/stb/: CMakeLists.txt
res/shaders/: basic_shader.glsl  current_shader.glsl
resources/models/: gltf_to_microgltf.js
resources/models/ancient/: license.txt  scene.gltf
resources/models/iron_golem/: license.txt  scene.gltf
resources/models/minecraft_player/: gltf_to_microgltf.js
resources/models/minecraft_village/: license.txt  scene.gltf
resources/shaders/: default.frag  default.vert
src/: CMakeLists.txt  Camera.cpp  Camera.h  Controls.h  Engine.cpp  Engine.h  Expected.h  Golem.microgltf.h  StringUnorderedMap.h  UserInterface.cpp  UserInterface.h  Village.microgltf.h  Window.cpp  Window.h  WindowContext.cpp  WindowContext.h  main.cpp  tiny_gltf_impl.cpp
src/Components/: Animator.cpp  Animator.h  CameraController.h  GolemUserInterface.cpp  GolemUserInterface.h  ImguiSingleton.cpp  ImguiSingleton.h  MeshRenderer.cpp  MeshRenderer.h  Transform.h  UserInterface.cpp  UserInterface.h
src/Engine/: Actor.cpp  Actor.hpp  Animation.cpp  Animation.h  AnimationSampler.cpp  AnimationSampler.h  Animator.cpp  Animator.h  Cube.cpp  Cube.h  Cuboid.h  Engine.cpp  Engine.h  EngineComponent.h  FrameInfo.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.cpp  Object.h  Transform.cpp  Transform.h
src/Engine/Components/: Component.cpp  Component.h  MeshComponent.cpp  MeshComponent.h
src/FtGLM/: ft_glm.h  func.cpp  func.h  mat3.h  mat4.h  quat.h  vec2.h  vec3.h  vec4.h
src/FtGLM/tests/: ft_glm_tests.cpp  ft_glm_tests.h
src/InterfaceBlocks/: CameraTargetInterfaceBlock.cpp  CameraTargetInterfaceBlock.h  DisplayInterfaceBlock.cpp  DisplayInterfaceBlock.h  GolemInterfaceBlock.cpp  GolemInterfaceBlock.h
src/MicroGLTF/: Model.cpp  Model.h  Struct.cpp  Struct.h
src/Models/: Frog.microgltf.h  Village.microgltf.h
src/OpenGL/: Cuboid.cpp  Cuboid.h  Debug.cpp  Debug.h  IndicesBuffer.cpp  IndicesBuffer.h  Pipeline.cpp  Pipeline.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgramInstance.cpp  ShaderProgramInstance.h  ShaderProgramVariants.cpp  ShaderProgramVariants.h  Vao.cpp  Vao.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/Scripts/: CameraController.cpp  CameraController.h  Transform.h  UserInterface.cpp
src/Utility/: EnumHelpers.h  StridedIterator.h  VectorMultiMap.h
src/Window/: Controls.cpp  Controls.h  Window.h
src/openGL/: Shader.h  VertexBuffer.h
tests/: CMakeLists.txt  ft_glm_tests.cpp  ft_glm_tests.h
